card, search, admin

--- a/src/front/styles/home.scss
+++ b/src/front/styles/home.scss
@@ -47,4 +47,8 @@
     background-color: #fcfcfa;
   }
 }
+//---------------------------------------
+/* SEARCH */
 
+
+//---------------------------------------
