--- a/src/front/styles/home.scss
+++ b/src/front/styles/home.scss
@@ -47,8 +47,16 @@
     background-color: #fcfcfa;
   }
 }
+.card-horizontal {
+  display: flex;
+  flex: 1 1 auto;
+}
+.picture{
+  height: 300px;
+}
 //---------------------------------------
 /* SEARCH */
 
 
 //---------------------------------------
+
