--- a/src/front/styles/footer.scss
+++ b/src/front/styles/footer.scss
@@ -4,7 +4,7 @@ ul {
 
 .footerFondo{
     background-image: linear-gradient(180deg, rgba(139, 217, 150, 0.7) 39.51%, rgba(121, 139, 242, 0.7) 100%);;
-    padding: 3rem 0rem 1rem 0rem;
+    padding-top: 60px;
     margin-top: 6rem;
     background-repeat: none;
     background-size: cover;
