--- a/src/front/styles/cards.scss
+++ b/src/front/styles/cards.scss
@@ -10,6 +10,7 @@
   /*float: left;*/
   max-width: 33.333%;
   padding: .75rem;
+  padding-left: 75px;
   margin-bottom: 2rem;
   border: 0;
   flex-basis: 33.333%;
