--- a/src/front/styles/home.scss
+++ b/src/front/styles/home.scss
@@ -108,8 +108,8 @@ ul{
      
 }
 #testing{
-  position: relative;
-  padding-top: 2em ; 
+  position: absolute;
+  padding-top: 7em ; 
   padding-right: 28em;     
   top: 13em;
   display: flex;
