--- a/src/front/styles/admDash.scss
+++ b/src/front/styles/admDash.scss
@@ -39,3 +39,31 @@
 .item{
     max-width: 800px !important;
 }
+
+.hotels{
+    border-radius: 20%;
+    margin: 200px;
+    margin-top: 80px;
+}
+.hotelImg img{
+    max-width: 300px !important;
+    border-radius: 10px;
+}
+.hotelImg{
+    
+    width: 100%;
+    display:flex;
+    justify-content: space-between;
+}
+
+.content-1{
+    width: 100%;
+    margin-left: 0px;
+}
+.content-2{
+    
+    
+}
+.content-3{
+
+}
