--- a/src/front/styles/hotelDash.scss
+++ b/src/front/styles/hotelDash.scss
@@ -13,5 +13,16 @@
 }
 
 .item-image img {
-    max-width: 100%;
+    max-width: 110%;
+  
+}
+
+.buttonHotels{
+    border-radius: 10px;
+    margin-top: 20px;
+    
+}
+.reseñas{
+    width: 180px;
+   
 }
