updated css admin

--- a/src/front/styles/admDash.scss
+++ b/src/front/styles/admDash.scss
@@ -1,5 +1,4 @@
 .row{
-    
     margin-left: 100px;
     margin-right: 100px;
     right:200em;
@@ -17,40 +16,14 @@
     padding: -10px;
 }
 
-.container2{
-    margin-top: 50px;
-    margin-left: 200px;
-    margin-right: 200px;
-    display: grid;
-    grid-gap: 5px;
-    grid-template-columns: 2fr 2fr;
-    grid-template-rows: 300px ;
-  }
-
-  .item-1 {
-    grid-row: 1 / 4;
-   }
-   .item-2{
-    grid-row: 1/2;
-   }
-   .item-3{
-    grid-row: 3/4;
-   }
-.item{
-    max-width: 800px !important;
-}
-
 .hotels{
     border-radius: 20%;
     margin: 200px;
-    margin-top: 80px;
+    margin-top: 40px;
 }
-.hotelImg img{
-    max-width: 300px !important;
-    border-radius: 10px;
-}
+
 .hotelImg{
-    
+   border-radius: 10px;
     width: 100%;
     display:flex;
     justify-content: space-between;
@@ -59,4 +32,20 @@
 .content-1{
     width: 100%;
     margin-left: 0px;
+}
+.hotelDiv{
+    width: 300px;
+}
+.contentAdm{
+    align-items: stretch;
+    margin-top: 40px;
+   margin-left: 200px;
+}
+
+.buttonHotel{
+    border-radius: 50px;
+}
+
+.resePunto{
+    padding: 3px;
 }
