--- a/src/front/styles/userDash.scss
+++ b/src/front/styles/userDash.scss
@@ -7,15 +7,7 @@
 
 
 
-main{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    background: white;
-    border-radius: 2px;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.3);
-    overflow-x: hidden;
-}
+
 
 .grid {
     display: flex;
@@ -25,21 +17,14 @@ main{
     justify-content: center;
     align-items: center;
 }
-
-.item {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    min-width: 200px;
-    max-width: 210px;
-    max-height: 290px;
-    padding: 8px;
-    margin: 0 4px;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.3);
-    justify-content: flex-start;
-    align-items: center;
+.userAdm{
+    margin-top: 10px;
+    margin-left: -5px;
+    
 }
-
-.item-image img {
-    max-width: 100%;
+.contentUser{
+    position: static;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.3);
+    border-radius: 20px;
+    padding-bottom: 10px;
 }
