--- a/src/front/styles/hotelDash.scss
+++ b/src/front/styles/hotelDash.scss
@@ -1,27 +1,29 @@
-.item {
+.hotel-item {
     display: flex;
     flex-direction: column;
-    flex: 1;
     min-width: 200px;
-    max-width: 800px;
+    max-width: 700px;
     padding: 8px;
     margin: 0 4px;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.3);
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: center;
+    border-radius: 50px;
 }
 
-.item-image img {
-    max-width: 100%;
-  
-}
 
 .buttonHotels{
-    border-radius: 10px;
+    border-radius: 20px;
     margin-top: 20px;
     
 }
 .reseñas{
     width: 180px;
    
+}
+
+.content-2{
+    
+    align-items: center;
+    margin-left: 5px;
 }
