--- a/src/front/styles/provincias.scss
+++ b/src/front/styles/provincias.scss
@@ -1,21 +1,29 @@
 .container3{
-    
+    margin: 100px;
     margin-top: 30px;
-    margin-left: 250px;
-    margin-right: 250px;
     display: grid;
-    grid-template-columns: repeat(5, 300px);
-    grid-template-rows: 300px;
-    grid-gap: 30px;
   }
 
-.item>img{
+.prov>img{
+    border-radius: 20px;
     width: 100%;
     height: calc(100% - 30px);
-    object-fit: contain;  
+    object-fit: fill;  
 }
-.item{
+.prov{
+    
     border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    min-width: 200px;
+    max-width: 600px;
+    padding: 8px;
+    margin: 0 8px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.3);
+    justify-content: flex-start;
+    align-items: center;
+    
 }
 
 .create{
@@ -26,5 +34,6 @@
     left: 973px;
     top: 207px;
     border-radius: 10px;
+    justify-content: flex-end;
 }
 
