--- a/src/front/styles/admDash.scss
+++ b/src/front/styles/admDash.scss
@@ -1,6 +1,6 @@
 .row{
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 1em;
+    margin-right: 1em;
     right:200em;
     align-items: stretch;
     display: flex;
@@ -18,7 +18,7 @@
 
 .hotels{
     border-radius: 20%;
-    margin: 200px;
+    margin: 2em;
     margin-top: 40px;
 }
 
@@ -38,8 +38,8 @@
 }
 .contentAdm{
     align-items: stretch;
-    margin-top: 40px;
-   margin-left: 200px;
+    margin-top: 2em;
+   margin-left: 2em;
 }
 
 .buttonHotel{
