--- a/src/front/styles/home.scss
+++ b/src/front/styles/home.scss
@@ -41,14 +41,16 @@ ul{
   background-color: transparent !important;
 
 } 
-
+.userBtn1{
+  width: 100px;
+ height: 40px;
+}
 .btn { 
  
  border-radius: 25px;
  margin-left: 5px;
  margin-bottom: 10px;
- width: 100px;
- height: 40px;
+ 
 }
 .push-right {
   margin-left: auto;
