--- a/src/front/styles/addHotelDesc.scss
+++ b/src/front/styles/addHotelDesc.scss
@@ -26,3 +26,10 @@
 .descHotel1{
     margin-top: 50px;
 }
+.serviceRoom2{
+    margin-top: 2em;
+    display: inline-block;
+}
+.contentDivRoom{
+    display: inline-block;
+}
