--- a/src/front/styles/userDash.scss
+++ b/src/front/styles/userDash.scss
@@ -5,7 +5,14 @@
     box-sizing: border-box;
 }
 
-
+.pepito{
+    position: relative;
+    right: 35%;
+    left: 1em;
+    top: -3%;
+    padding-top: 3%;
+    font-size: 280%;
+}
 
 
 
