--- a/src/front/styles/hotelDash.scss
+++ b/src/front/styles/hotelDash.scss
@@ -3,9 +3,8 @@
     flex-direction: column;
     min-width: 200px;
     max-width: 700px;
-    padding: 8px;
-    margin: 0 4px;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.3);
+    padding: 2%;
+    margin: 0 4px;    
     justify-content: flex-end;
     align-items: center;
     border-radius: 50px;
