page css updated

--- a/src/front/styles/addHotelDesc.scss
+++ b/src/front/styles/addHotelDesc.scss
@@ -21,10 +21,11 @@
     background-color: grey;
 }
 .DatepickHotel{
-    border: solid grey;
+    padding-left: 3%;
 }
 .descHotel1{
-    margin-top: 50px;
+    margin-top: 3%;
+    
 }
 .serviceRoom2{
     margin-top: 2em;
