--- a/src/front/styles/reviewRoom.scss
+++ b/src/front/styles/reviewRoom.scss
@@ -7,4 +7,11 @@
 }
 .ReviewsCards{
     display: flex;
+    justify-content: space-between;
+    
+}
+
+.ReviewsCards .card{
+    width: 24%;
+    
 }
