--- a/src/front/styles/typeRoom.scss
+++ b/src/front/styles/typeRoom.scss
@@ -1,18 +1,20 @@
 .headerRoom{
+    font-size: 150%;
     display: flex;
-    align-items: center;
+    padding-top: 1%;
     color: white;
     background-color: #8BD996;
-    border-radius: 10px;
+    
 }
-.containerRoom{
-    border: 1px solid rgba(0, 0, 0, 0.125);;
+.typeRoom1{
+    margin-top: 60px;
+    border: 2px solid #8bd996;
     border-radius: 10px;
-    margin: 10px;
+   
 }
 
 .photoRoom{
-    max-width: 40%;
+    
     align-items: center;
 }
 .imageRoom{
@@ -32,7 +34,6 @@
     border-radius: 20px;
     background-color: grey;
 }
-
-.typeRoom1{
-    margin-top: 50px;
+.containerRoom{
+    padding-top: 1em;
 }
