--- a/src/front/styles/userDash.scss
+++ b/src/front/styles/userDash.scss
@@ -6,10 +6,9 @@
 }
 
 .pepito{
-    position: relative;
-    right: 35%;
-    left: 1em;
-    top: -3%;
+    
+   
+    padding-left: 1em;    
     padding-top: 3%;
     font-size: 280%;
 }
