--- a/src/front/styles/paymentGateway.scss
+++ b/src/front/styles/paymentGateway.scss
@@ -9,10 +9,15 @@
     color: white;
 }
 .PaymentGateway{
+    display: inline-block;
     margin-top: 50px;
     margin-left: 70px;
     margin-right: 70px;
 }
 .country-name{
     color: black;
+}
+
+.descPayment{
+    width: 25rem;
 }
