--- a/src/front/styles/hotelDash.scss
+++ b/src/front/styles/hotelDash.scss
@@ -1,5 +1,5 @@
 .hotel-item {
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     min-width: 200px;
     max-width: 700px;
