--- a/src/front/styles/hotelDash.scss
+++ b/src/front/styles/hotelDash.scss
@@ -4,8 +4,8 @@
     min-width: 200px;
     max-width: 700px;
     padding: 2%;
-    margin: 0 4px;    
-    align-items: center;
+    margin: 0 30px;    
+    //align-items: center;
     border-radius: 50px;
 }
 
