profiles acc+favorites

--- a/src/front/styles/home.scss
+++ b/src/front/styles/home.scss
@@ -381,6 +381,23 @@ h3, h2{
 }
 
 
+.moving {
+  
+  margin-top: 10%;
+ 
+  height: 55em; 
+  width: 32em;
+  
+  
+ 
+}
+.contai{
+ 
+  margin: 5em;
+
+}
+
+
 .elementStyle{
   
   width: 20em;
