--- a/src/front/styles/admDash.scss
+++ b/src/front/styles/admDash.scss
@@ -11,9 +11,8 @@
 }
 
 .container{
-    max-width: 2000px;
-    margin-top: 30px;
-    padding: -10px;
+    max-width: 500em;   
+    padding-bottom: 1em;
 }
 
 .hotels{
@@ -36,11 +35,7 @@
 .hotelDiv{
     width: 300px;
 }
-.contentAdm{
-    align-items: stretch;
-    margin-top: 2em;
-   margin-left: 2em;
-}
+
 
 .buttonHotel{
     border-radius: 50px;
