--- a/src/front/styles/provincias.scss
+++ b/src/front/styles/provincias.scss
@@ -6,23 +6,25 @@
 
 .prov>img{
     border-radius: 20px;
+    margin-top: 1em;
     width: 100%;
+    min-width: 300px;
     height: calc(100% - 30px);
     object-fit: fill;  
+
 }
 .prov{
     
     border-radius: 30px;
     display: flex;
     flex-direction: column;
-    flex: 1;
+    flex: 1;   
     min-width: 200px;
-    max-width: 600px;
-    padding: 8px;
-    margin: 0 8px;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.3);
-    justify-content: flex-start;
-    align-items: center;
+    max-width: 600px;    
+    margin: 10px 9px;
+    box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
+   
+    
     
 }
 
