--- a/src/front/styles/index.scss
+++ b/src/front/styles/index.scss
@@ -63,10 +63,10 @@
     width: fit-content;
 }
 
-.card{
-    //background-color: lightblue;
-    width: 70em;
-}
+// .card{
+//     //background-color: lightblue;
+//     width: 70em;
+// }
 
 .resenasDetail{
     
