--- a/src/front/styles/home.scss
+++ b/src/front/styles/home.scss
@@ -21,8 +21,6 @@
  display: inline-block;
  
  position: relative;
- top: -18em;
- left: 35em;
 
 }
 
@@ -403,5 +401,10 @@ h3, h2{
   width: 20em;
   min-height: 15em; 
   border-radius: 50px; 
+}
+
+.cardFeatured{
+  flex: 1 1 auto;
+  min-height: 1px;
 }
 
