--- a/src/front/styles/index.scss
+++ b/src/front/styles/index.scss
@@ -35,7 +35,7 @@
     text-align: center;
     text-decoration: none;
     font-size: 155px;
-    color: white;
+    color: #17a2b8;
     
     padding:5px;
     //border-radius: 50%;
