--- a/src/front/styles/styleNav/styleNav.scss
+++ b/src/front/styles/styleNav/styleNav.scss
@@ -93,7 +93,9 @@
         display: none;
 
     }
-    
+    .palNav {
+        justify-content: space-between;
+    }
 
      #navbar-dropmenu{
         display: block;
@@ -108,7 +110,7 @@
         flex-direction: column;
         width: 100%;
         height: 80vh;
-        background: blue;
+        background: #8BD996;
         top: 80px;
         left: 0;
         text-align: center;
