--- a/src/front/styles/styleNav/styleNav.scss
+++ b/src/front/styles/styleNav/styleNav.scss
@@ -60,16 +60,7 @@
     transform: scaleX(1);
     transform-origin: left;
 }
-// div #btn,
-// div #cancel {
-//     color: white;
-//     font-size: 30px;
-//     float: right;
-//     line-height: 80px;
-//     margin-right: 40px;
-//     cursor: pointer;
-    
-// }
+
 #navbar-dropmenu{
     display: none;
 }
@@ -117,7 +108,7 @@
         position: absolute;
         flex-direction: column;
         width: 100%;
-        
+        z-index: 3;
         background: #8BD996;
         top: 80px;
         left: 0;
