--- a/src/front/styles/home.scss
+++ b/src/front/styles/home.scss
@@ -1,3 +1,11 @@
+.overflow-horizontal{
+  overflow: auto;
+}
+
+.border-radius{
+  border-radius: 50px; 
+}
+
 @media (min-width: 1118px){
   //Reviews --------------
   .reviewsHome{
@@ -21,9 +29,8 @@
 
 
 
-//--------------------------------------------------------------
 
-
+//---------------------------------------------------------------
 
 
 
@@ -180,15 +187,7 @@
   
 }
 
-.inline-div{
-  
-  display: inline-flex;
-  padding-bottom: 10em;
-  
-  margin-left: 10%;
-  
 
-}
 
 .btton{
   width: 14%;
@@ -380,12 +379,6 @@ h3, h2{
 }
 
 
-.elementStyle{
-  
-  width: 20em;
-  min-height: 15em; 
-  border-radius: 50px; 
-}
 
 .cardFeatured{
   flex: 1 1 auto;
