cambios 27/09 por error en main

--- a/src/front/styles/index.scss
+++ b/src/front/styles/index.scss
@@ -71,11 +71,11 @@
     
   }
 
-.parraf{
-    width: 60%;
-    position: relative;
+// .parraf{
+//     width: 60%;
+//     position: relative;
 
-}
+// }
 .ajustDate{
 
     width: 40em;
