--- a/src/front/styles/home/featuredHotel.scss
+++ b/src/front/styles/home/featuredHotel.scss
@@ -51,11 +51,34 @@
        
     }
   
+    @media (max-width: 1024px){  
+      
+        .imgRedonda img{
+            position: relative;
+            width: 17em;
+            height: 17em;
+            overflow: hidden;
+            border-radius: 80%;
+            border-top:10px solid rgb(255, 230, 0) ;
+            border-left:10px solid rgb(255, 230, 0) ;
+           
+        }
+      }
 
   @media (max-width: 768px){     
  
     .pillsResponsive{
         justify-content: center;
+}
+    .imgRedonda img{
+        position: relative;
+        width: 17em;
+        height: 17em;
+        overflow: hidden;
+        border-radius: 80%;
+        border-top:10px solid rgb(255, 230, 0) ;
+        border-left:10px solid rgb(255, 230, 0) ;
+   
 }
 }
 @media (max-width: 425px){     
